add low-Mach in front of isentropic in one location

--- a/low_mach_final.tex
+++ b/low_mach_final.tex
@@ -631,7 +631,7 @@ The asymptotic study presented here is inspired by the work of Muller et al. \ci
 an asymptotic derivation for the Navier-Stokes was presented. 
 We remind the reader that the objective is to determine appropriate scaling for the entropy 
 viscosity coefficients so that the dissipative terms remain well-scaled for two limit cases: 
-(i) the isentropic limit where Euler equations degenerate to an incompressible system of 
+(i) the isentropic low-Mach limit where Euler equations degenerate to an incompressible system of 
 equations in the low-Mach limit and 
 (ii) the non-isentropic limit with formation of shocks. 
 The isentropic limit of the Euler equations with viscous regularization should yield incompressible 
