--- a/low_mach_final.tex
+++ b/low_mach_final.tex
@@ -564,7 +564,7 @@ are detailed next. %in \sct{sec:new_ent_prod}.
 
 In this section, the entropy residual $\resi$ is recast as a function of pressure, density, velocity and speed 
 of sound. Then, a low-Mach asymptotic study is carried out for the Euler equations with viscous regularization 
-in order to derive an appropriate normalization parameter that is valid in the low-Mach regime as well as for 
+in order to derive an appropriate normalization parameter that is valid in the isentropic low-Mach regime as well as for 
 transonic and supersonic flows. 
 
 %===================================================================================================
