added comments in blue

--- a/low_mach_final.tex
+++ b/low_mach_final.tex
@@ -315,17 +315,17 @@ equations of state are employed.
 %demand for codes that can deal with flows at all Mach numbers.
 
 Solving accurately compressible fluid equations in the low-Mach limit is an ongoing topic of research. 
-In many engineering applications, compressibility effects require the the solution of the compressible fluid equations
+In many engineering applications, compressibility effects require the solution of the compressible fluid equations
 in nearly incompressible regimes and/or for low-Mach flow problems. For example, such flows are encountered 
 in aerodynamics in the study of airships. In the nuclear industry, flows are nearly in the incompressible regime but 
-compressible effects cannot be neglected because of the heat source, and because of postulated accident scenarios, 
+compressible effects cannot be neglected because of the heat source, and \tcb{because} of postulated accident scenarios, 
 and thus need to be accurately resolved. Hence, there is a strong interest to develop computational methods 
 that can solve both compressible and incompressible flow problems.  
 
 When solving Euler equations for a wide range of Mach numbers, multiple questions must be addressed: stability, 
 accuracy and solution convergence in the low-Mach regime. Because of the hyperbolic nature of the equations, 
 shocks can form during transonic and supersonic flows and require the use of adequate numerical techniques to stabilize solution
-and correctly resolve the discontinuities. A wide range of stabilization methods are available in the literature: flux-limiter techniques 
+and correctly resolve the discontinuities. A wide range of stabilization methods are available in the literature: \tcb{approximate Riemann solvers} \cite{Toro}, flux-limiter techniques 
 \cite{FluxLimiter, FluxLimiter2}, pressure-based viscosity methods \cite{PBV_book}, Lapidus method \cite{Lapidus_paper, LMP, Lapidus_book}, 
 and the entropy-viscosity method \cite{jlg1, jlg2}, among others. These numerical methods are usually developed using simple equations 
 of state and tested for transonic and supersonic flows where the disparity between the acoustic wave speed and the fluid speed is not 
@@ -336,7 +336,7 @@ behavior is well documented in the literature \cite{LowMach1, LowMach2, LowMach3
 % and often treated by performing a low-Mach  asymptotic study of Euler equations. 
 In \cite{LowMach1}, a low-Mach asymptotic study has demonstrated convergence of the 
 compressible Euler equations to the incompressible ones. 
-Many well-known stabilization techniques, for instance, the Roe scheme and the SUPG technique \cite{},
+Many well-known stabilization techniques, for instance, the Roe scheme and the SUPG technique,
 do not yield the correct solution in the low-Mach regime and suitable modifications have been proposed \cite{Roe,LowMach3}
 to ensure the convergence to the correct solution while preserving the original shock stabilization 
 properties of these schemes. 
@@ -362,7 +362,7 @@ steady-state solutions for low-Mach flows using explicit schemes.
 %temporal derivatives of the equation and, thus, can only be used for steady-state flows. 
 To avoid modifying the time derivatives, 
 the temporal implicit capabilities of the MOOSE multiphysics framework \cite{MOOSE} are used. With such a choice, low-Mach steady-state solutions 
-can be obtained effective while preserving the accuracy of the transient solution; however, it requires the use of nonlinear solvers.
+can be obtained effective\tcb{ly} while preserving the accuracy of the transient solution; however, it requires the use of nonlinear solvers \tcb{and a preconditioner}.
 
 In this paper, we employ the entropy viscosity method as a numerical stabilization for the inviscid Euler equation and assess its performance 
 in the low-Mach regime. 
@@ -2033,8 +2033,7 @@ the square of the Mach number, as expected in the incompressible limit.
 %circular bump (subsonic and transonic flows) illustrated the capabilities of the method to adapt to the flow type.
 
 In the future, we plan to further extend the entropy viscosity method to the seven-equation two-phase flow fluid model \cite{SEM}. 
-This two-phase flow system of equations is a good candidate for two reasons: it is unconditionally hyperbolic 
-and degenerates to the standard Euler equations when one phase disappears.
+This two-phase flow system of equations is a good candidate for three reasons: it is unconditionally hyperbolic, degenerates to the standard Euler equations when one phase disappears, \tcb{and was derived by assuming that each phase obeys to the Euler equations.}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
